--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
       <a class="navbar-brand" routerLink="">{{title}}</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
+      <li><a routerLink="all">All</a></li>
       <li><a routerLink="new">New</a></li>
       <li><a routerLink="about">About</a></li>
     </ul>
