--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
       <li><a routerLink="all">All</a></li>
       <li><a routerLink="new">New</a></li>
       <li><a routerLink="about">About</a></li>
+      <li><a routerLink="add">Add</a></li>
     </ul>
   </div>
 </nav>
