--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -1,1 +1,8 @@
 <h2>Add Post</h2>
+<form class="form-group">
+  <label for="newHeadline">Headline:</label>
+  <input type="text" #newHeadline name="newHeadline" class="form-control">
+  <label for="newContent">Content:</label>
+  <textarea type="text" #newContent name="newContent" class="form-control" rows="7" cols="50"></textarea>
+  <button type="button" class="btn" (click)="addPost(newHeadline.value, newContent.value); newHeadline.value=''; newContent.value='';" id="addPost">Add</button>
+</form>
