Add list of hard coded post objects to all page.

--- a/src/app/all/all.component.html
+++ b/src/app/all/all.component.html
@@ -1,1 +1,8 @@
 <h2>All Posts</h2>
+
+<ol>
+  <li *ngFor="let eachPost of masterPostList">
+    <h4>{{eachPost.headline}}</h4>
+    <button type="button" class="btn" name="button">Edit Post</button>
+  </li>
+</ol>
